# NotSoSoftUart_STM32

./: .gdbinit  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  LICENSE  drv  mdw  readme.md
app/inc/: FreeRTOSConfig.h  log.h  utils.h
app/inc/hw/: FreeRTOSConfig.h  gpio.h  main.h  nss_uart_port.h  stm32_assert.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
app/inc/tasks/: nssu_task.h
app/src/: freertos.c  log.c  main.c
app/src/hw/: freertos.c  gpio.c  main.c  nss_uart_hw.c  nss_uart_port.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
app/src/tasks/: nssu_task.c
code_gen/: .mxproject  Drivers  Inc  Middlewares  NotSoSoftUart_STM32.ioc  STM32F411CEUx_FLASH.ld  Src  mx.scratch  startup_stm32f411xe.s
code_gen/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
code_gen/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
scripts/: cleanup_after_code_gen.sh  del_user_code_tags.sh  indent_with_vim.sh
tests/: tests-main.c
