CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(stm32-NotSoSoftUart)
ENABLE_LANGUAGE(ASM)

# Set variables used by ObKo-stm32cmake 
SET(TOOLCHAIN_PREFIX "$ENV{HOME}/ARMToolchain")
SET(STM32_CHIP	"STM32F411CE")
SET(STM32_FAMILY "F4")
SET(STM32Cube_DIR "${CMAKE_SOURCE_DIR}/code_gen")
SET(STM32_LINKER_SCRIPT	"${STM32Cube_DIR}/STM32F411CEUx_FLASH.ld")

INCLUDE("${CMAKE_SOURCE_DIR}/cmake/gcc_stm32.cmake")
INCLUDE("${CMAKE_SOURCE_DIR}/cmake/gcc_stm32f4.cmake")

# Set cmake module path to reach cmake directory
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

# Put the binary file into bin directory
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

SET(CMAKE_BUILD_TYPE Debug)

FIND_PACKAGE(CMSIS REQUIRED)

SET(FREERTOS_HEAP_IMPL 4)
FIND_PACKAGE(FreeRTOS REQUIRED)

FIND_PACKAGE(STM32LL COMPONENTS gpio exti tim REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS tim REQUIRED)

# Set the lists of user files
SET(SRC_DIR "${CMAKE_SOURCE_DIR}/app/src")
SET(HWSRC_DIR "${CMAKE_SOURCE_DIR}/app/src/hw")
SET(INC_DIR "${CMAKE_SOURCE_DIR}/app/inc")
SET(HWINC_DIR "${CMAKE_SOURCE_DIR}/app/inc/hw")

INCLUDE_DIRECTORIES(
	${INC_DIR}
	${HWINC_DIR}
	${CMSIS_INCLUDE_DIRS}
	${FreeRTOS_INCLUDE_DIRS}
	${STM32LL_INCLUDE_DIR}
	${STM32HAL_INCLUDE_DIR}
)

FILE(GLOB PROJECT_SOURCES
	"${SRC_DIR}/*.c"
	"${HWSRC_DIR}/*.c"
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${FreeRTOS_SOURCES} ${STM32LL_SOURCES} 
	${STM32HAL_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
